2005-12-27  Atsushi Enomoto <atsushi@ximian.com>

	* RdpPattern.cs, RdpUtil.cs : reimplemented name class analysis to
	  not create extraneous QName instances. This also fixes some weird
	  bugs (test #362 and #363).

2005-12-27  Atsushi Enomoto <atsushi@ximian.com>

	* RdpPattern.cs : Checking interleave restriction in section 7.4 with
	  PatternType was not insufficient. Now I use ContainsText(). It fixes
	  testcase #371.

2005-12-20  Atsushi Enomoto <atsushi@ximian.com>

	* RdpPattern.cs : cache ContentType and save speed.

2005-09-20  Atsushi Enomoto <atsushi@ximian.com>

	* Util.cs : Added name class analysis support. The algorithm is at
	  http://www.thaiopensource.com/relaxng/nameclass.html .
	* RdpPattern.cs :
	  - added CheckNameOverlap() for group and interleave to do name class
	    analysis (spec 7.3 and 7.4).
	  - Removed CheckAttributeDuplicates(). Now name class analysis is
	    implemented in CheckNameOverlap().
	  - Added additional bool parameter to GetLabels() to collect
	    RdpNameClass instances instead of XmlQualifiedName instances.

2005-07-31  Atsushi Enomoto <atsushi@ximian.com>

	* RdpPattern.cs : GetLabels() for RdpGroup should check attributes
	  when the left branch is not nullable (it works like an interleave).
	  Implemented spec 7.3 attribute check (though not enabled for now).

2005-04-11  Atsushi Enomoto <atsushi@ximian.com>

	* Util.cs : tiny debug string fix.

2005-03-01  Atsushi Enomoto <atsushi@ximian.com>

	* RdpPattern.cs : In "textDeriv(group p1 p2) s", "nullable p1" is
	  incorrectly computed as "nullable p".

2005-02-06  Atsushi Enomoto <atsushi@ximian.com>

	* RdpObjects.cs : provide error type name. removed commented code block.

2005-02-06  Atsushi Enomoto <atsushi@ximian.com>

	* RdpPattern.cs : MakeOneOrMore() did not always set up internal table.

2004-12-06  Atsushi Enomoto <atsushi@ximian.com>

	* Util.cs : trivial debug string fix.
	* RdpPattern.cs : trivial formatting fix.
